# OS

./: .gitignore  Cargo.toml  README.md  devenv.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: check.yml  linter.yml  rust.yml  validate.yml
kernel/: Cargo.toml
kernel/src/: clock.rs  cmos.rs  errors.rs  gdt.rs  init.rs  interrupts.rs  lib.rs  memory.rs  pit.rs  serial.rs  time.rs  vga_buffer.rs
kernel/src/allocator/: fixed_size_block.rs  linked_list.rs  mod.rs
kernel/src/dev/: ata.rs  mod.rs
kernel/src/dev/ata/: bus.rs  drive.rs  mod.rs  register.rs  registers.rs
kernel/src/dev/net/: mod.rs
kernel/src/fs/: fat.rs  mod.rs
kernel/src/sys/: idt.rs  mod.rs  pic.rs  pit.rs
kernel/src/sys/calls/: mod.rs
kernel/src/sys/task/: clock.rs  executor.rs  keyboard.rs  mod.rs  simple_executor.rs
kernel/src/sys/time/: clock.rs  cmos.rs  mod.rs  rtc.rs
kernel/src/system/: mod.rs  process.rs
kernel/src/system/sys_calls/: mod.rs
kernel/src/system/task/: executor.rs  mod.rs
kernel/src/task/: executor.rs  keyboard.rs
kernel/tests/: heap_allocation.rs  logic.rs  should_panic.rs
programs/shell/: Cargo.toml
programs/shell/src/: lib.rs
programs/shutdown/: Cargo.toml
programs/shutdown/src/: lib.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  primes.rs  simple_executor.rs
stdlib/: Cargo.toml
stdlib/src/: lib.rs
tests/: basic_boot.rs  heap_allocation.rs  logic.rs  should_panic.rs  stack_overflow.rs
