[package]
name = "basic_os"
version = "0.1.0"
edition = "2021"
authors = ["Bastian Almar Wolsgaard Asmussen <bastianasmussen@gmail.com>"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.9", features = ["map_physical_memory"] }  # Bootloader
volatile = "0.3.0"    # Volatile memory
spin = "0.9.8"        # Spinlock
x86_64 = "0.14.2"     # Provides the x86_64 target
uart_16550 = "0.2.0"  # Serial port
pic8259 = "0.10.1"    # Programmable Interrupt Controller
pc-keyboard = "0.7.0" # Handles keyboard input

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
