[package]
name = "os"
version = "0.1.0"
edition = "2021"
authors = ["Bastian Almar Wolsgaard Asmussen <bastian@asmussen.tech>"]
description = "A simple operating system written in Rust"

[dependencies]
kernel = { path = "kernel" }
bootloader = "0.9.9" # Bootloader.
x86_64 = "0.14.2" # Provides the x86_64 target.

shell = { path = "programs/shell" }

[workspace]
resolver = "2"

members = ["kernel", "programs/shell", "programs/shutdown", "stdlib"]
