[package]
name = "os"
version = "0.1.0"
edition = "2021"
authors = ["Bastian Almar Wolsgaard Asmussen <bastian@asmussen.tech>"]
description = "A simple operating system written in Rust"

[dependencies]
# The OS kernel.
kernel = { path = "kernel" }
# Bootloader.
bootloader = "0.9.23"

[workspace]
members = ["kernel"]
