[package]
name = "kernel"
version = "0.2.1"
edition = "2021"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1

[dependencies]
# Bootloader.
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
# Volatile memory access.
volatile = "0.3.0"
# Spinlocks.
spin = "0.9.8"
# Provides the x86_64 target.
x86_64 = "0.14.2"
# Serial port.
uart_16550 = "0.3.0"
# Programmable Interrupt Controller.
pic8259 = "0.10.1"
# Handles keyboard input.
pc-keyboard = "0.7.0"
# Allocator.
linked_list_allocator = "0.10.5"
# Lazy statics.
lazy_static = { version = "1.0", features = ["spin_no_std"] }
# Crossbeam queue.
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
# Concurrency primitives.
conquer-once = { version = "0.4.0", default-features = false }
# Async primitives.
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }
# Error handling.
thiserror-no-std = "2.0.2"
# Bit fields.
bit_field = "0.10.2"
